# trade-scripts

./: .coderabbit.yaml  .copier-answers.yml  .envrc.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  SECURITY.md
.claude/: ai-review-repo-config.toml  settings.json
.claude/agents/: ai-confirm-verifier.md  ai-fallback-reviewer.md  ai-reviewer.md  coderabbit-screening-reviewer.md  duplicate-detector.md  issue-reviewer.md  issue-writer.md  verdict-extractor.md
.claude/commands/: brief.md
.claude/hooks/: analyze-loop-on-stop.py  auto-ruff-format.py  auto-tick-issue-items.py  ban-anthropic-import.py  ban-claude-p.py  ban-hardcoded-repo.py  ban-ng-words.py  ban-parents-n.py  ban-shell-files.py  block-dangerous-git.py  detect-ai-confirm-misuse.py  detect-rule-bloat.py  label-pr.py  notify-copier-staleness.py  on-stop.py  protect-tests.py  require-issue-id-in-pr-title.py  require-issue-next-completion.py  require-issue.py  require-main-sync.py  require-merge-ci-status.py  require-mypy.py  require-preflight-marker.py  require-red-first.py  require-ruff-format.py  require-yaru-consistency.py  session-start-cache.py  validate-issue.py  validate-skill.py
.claude/rules/: context-budget.yaml  decision-journal.md  escalation-format.md  gherkin-forbidden-words.yaml  gherkin-required-markers.yaml  hardcoded-patterns.yaml  hook-groups.yaml  implementation-constraints.md  issue-creation.md  manual-check-keywords.yaml  review-backends.md  review-prompt.yaml  rule-bloat-keywords.yaml  tool-calling.md  (+3 more)
.github/: dependabot.yml
projects/py/trade_scripts/: README.md  pyproject.toml
projects/py/trade_scripts/src/trade_scripts/: __init__.py  position.py
projects/py/trade_scripts/tests/: test_position.py
projects/py/trade_scripts/tests/features/: .gitkeep
projects/py/trade_scripts/tests/step_defs/: .gitkeep
(+64 files in other folders)
