[project]
name = "trade_scripts"
version = "0.1.0"
description = "トレード用スクリプト集"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "mypy>=1.11",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# src レイアウトを未インストールでも import 可能にする（tidd run-project-tests は
# project dir で bare pytest を起動するため）
pythonpath = ["src"]
markers = [
    "target_position: position sizing モジュールのテスト",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
