[project]
name = "trade_scripts"
version = "0.1.0"
description = "トレード用スクリプト集"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Issue #2113 と同じ理由で pytest の上限を固定する: pytest-bdd 8.1.0 が
# pytest 10 で削除される内部 API を使用しているため。
dev = [
    "pytest>=9.1.1,<10",
    "pytest-bdd>=7.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    "mypy>=2.3.0",
    "ruff>=0.15.22",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# src レイアウトを未インストールでも import 可能にする（tidd run-project-tests は
# project dir で bare pytest を起動するため）
pythonpath = ["src"]
markers = [
    "target_position: position sizing モジュールのテスト",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
